<resources>
    <string name="app_name">NamePic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings_sub">Stylize your own name picture</string>
    <string name="color">Color</string>
    <string name="base_pic">BaseColor</string>
    <string name="center_text">CenterText</string>
    <string name="text">Text</string>
    <string name="text_count">TextCount</string>
    <string name="text_size">TextSize</string>
    <string name="current_value">%1$s:\t%2$d</string>
    <string name="choose_color">Choose color</string>
    <string name="text_y_postion">TextYPosition</string>
    <string name="input_name_title">Input Name Text</string>
    <string name="ok">Set</string>
    <string name="cancel">Cancel</string>
    <string name="text_font">TextFont :</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="back_pic">BackPicture</string>
    <string name="show_back_pick">Show BackPicture</string>

    <string name="font_fangsong">Fang Song</string>
    <string name="font_ms_yahei">MS YaHei</string>
    <string name="font_ms_yahei_bold">MS YaHei BOLD</string>
    <string name="font_blackbody">BLACK BODY</string>
    <string name="font_kai_ti">Kai ti</string>
    <string name="font_song">Song Ti</string>

    <string name="font_fangsong_value" translatable="false">simfang.ttf</string>
    <string name="font_ms_yahei_value" translatable="false">msyh.ttf</string>
    <string name="font_ms_yehei_bold_value" translatable="false">msyhbd.ttf</string>
    <string name="font_black_body_value" translatable="false">simhei.ttf</string>
    <string name="font_kaiti_value" translatable="false">simkai.ttf</string>
    <string name="font_songti_value" translatable="false">simsun.ttc</string>
    <string name="save_failed">Save failed</string>
    <string name="save_success">Saved to gallery</string>
    <string name="choose_share_to">Share to</string>
    <string name="feedback">Feedback</string>
    <string name="about_me">About Me</string>
    <string name="feedback_tip">manman xie</string>
    <string name="submit">Submit</string>
    <string name="aboutme_des">About Me description</string>
    <string name="please_input_here">Please type suggestions here ~</string>
    <string name="contact">Contact:</string>
    <string name="contact_tint">choosable</string>
    <string name="empty_body">Did not type anything yet ..</string>
    <string name="send_success">Send success</string>
    <string name="send_failed">Send failed</string>
    <string name="faeedback_success">Feedback Complete</string>
    <string name="feedback_failed">Feedback Failed</string>

</resources>
