<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_text_bg"
        android:padding="2dp"
        android:text="@string/color"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/color_base_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/base_pic"
            android:textColor="@android:color/black"
            app:buttonTint="@color/colorGreen" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/color_center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/center_text"
            android:textColor="@android:color/black"
            app:buttonTint="@color/colorGreen" />
    </RadioGroup>

    <!--Color Options-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/color_option_1"
                style="@style/ColorTextView"
                android:background="#888888"
                android:text="✓" />

            <TextView
                android:id="@+id/color_option_2"
                style="@style/ColorTextView"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/color_option_3"
                style="@style/ColorTextView"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/color_option_4"
                style="@style/ColorTextView"
                android:background="#668B8B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/color_option_5"
                style="@style/ColorTextView"
                android:background="#EECFA1" />

            <TextView
                android:id="@+id/color_option_6"
                style="@style/ColorTextView"
                android:background="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/color_option_7"
                style="@style/ColorTextView"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/color_option_8"
                style="@style/ColorTextView"
                android:background="@android:color/holo_green_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/color_option_9"
                style="@style/ColorTextView"
                android:background="@android:color/holo_purple" />

            <TextView
                android:id="@+id/color_option_10"
                style="@style/ColorTextView"
                android:background="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/color_option_11"
                style="@style/ColorTextView"
                android:background="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/color_option_12"
                style="@style/ColorTextView"
                android:background="@drawable/colorful_bg" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:background="@drawable/settings_text_bg"
        android:padding="2dp"
        android:text="@string/text"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_text"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_margin"
                android:background="@drawable/oval_blue"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="连"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rec_border_gray"
            android:orientation="vertical"
            android:padding="4dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_count"
                    android:textColor="@android:color/black"
                    app:buttonTint="@color/colorGreen" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size"
                    android:textColor="@android:color/black"
                    app:buttonTint="@color/colorGreen" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_y_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_y_postion"
                    android:textColor="@android:color/black"
                    app:buttonTint="@color/colorGreen" />
            </RadioGroup>

            <TextView
                android:id="@+id/seek_bar_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>